<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Translate">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bright"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/bright">
            <Spinner
                android:id="@+id/spinnerLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:hint="@string/spinnerLang1"
                android:layout_weight="2"
                android:layout_margin="10dp"

                >
            </Spinner>

            <ImageButton
                android:id="@+id/btncomp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/btncomp"
                app:srcCompat="@drawable/abc_vector_test">

            </ImageButton>

            <Spinner
                android:id="@+id/spinnerLang2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:hint="@string/spinnerLang2"
                android:layout_weight="2"
                android:layout_margin="10dp"

                >
            </Spinner>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="10"
            android:id="@+id/input"
            android:background="@color/orange"

            >

        </EditText>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btntrans"
            android:text="@string/btntrans"
            android:layout_margin="25dp"
        >
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnExit"
            android:text="@string/btnExit"
            android:layout_margin="25dp"
            >
        </Button>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="10"
            android:background="@color/orange"
            android:id="@+id/output"
            >

        </TextView>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>