<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
       >



        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnGiris"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/btnGiris"
                />

            <LinearLayout
                android:id="@+id/girisLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/e_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="E-Mail" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSifre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Şifre"
                        android:inputType="textPassword"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnGirisYap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/btnGirisYap"
                  />
            </LinearLayout>
            <Button
                android:id="@+id/btnKayit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/btnKayit"
                 />


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>